--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
 <br><br><br><br>
 
     <section id="services">
-        <h1>Our Services</h3>
+        <h1>Our Services</h1>
             <br><br><br>
         <div id="serve1">
             <div class="box">
-                <img src="pizaz.jpg" alt="not found">
-                <h2>food ordring</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab quaerat aperiam similique </p>
+                <img src="p.png" alt="not found">
+                <h2>Pizza</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, repellat.</p>
             </div>
             <div class="box">
-                <img src="1.png" alt="">
-                <h2>food ordring</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, facilis. Facilis .</p>
+                <img src="j.png" alt="">
+                <h2>Junk food</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, numquam.</p>
             </div>
             <div class="box">
-                <img src="burger1.jpg" alt="">
-                <h2>food ordring</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, optio vel corrupti</p>
+                <img src="r.png" alt="">
+                <h2>burgur</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, rem.</p>
             </div>
 
             
